--- a/src/Infrastructure/UserPlatform.Infrastructure/UserPlatform.Infrastructure.csproj
+++ b/src/Infrastructure/UserPlatform.Infrastructure/UserPlatform.Infrastructure.csproj
@@ -8,6 +8,12 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.7" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.7" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="8.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\Domain\UserPlatform.Domain\UserPlatform.Domain.csproj" />
   </ItemGroup>
 
 </Project>
