Add Service Layers
Add Service Layers

--- a/src/Application/UserPlatform.Application/UserPlatform.Application.csproj
+++ b/src/Application/UserPlatform.Application/UserPlatform.Application.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\Infrastructure\UserPlatform.Infrastructure\UserPlatform.Infrastructure.csproj" />
+  </ItemGroup>
+
 </Project>
