--- a/src/Presentation/UserPlatform.Api/appsettings.Development.json
+++ b/src/Presentation/UserPlatform.Api/appsettings.Development.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=UserPlatformDb;Integrated Security=True;"
+    "DefaultConnection": "Server=localhost;Database=UserPlatform;Integrated Security=True;TrustServerCertificate=True;"
   }
 }
