--- a/src/Presentation/UserPlatform.Api/appsettings.json
+++ b/src/Presentation/UserPlatform.Api/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=UserPlatformDb;Integrated Security=True;"
+    "DefaultConnection": "Server=localhost;Database=UserPlatform;Integrated Security=True;TrustServerCertificate=True;"
   }
 }
